<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="ifRoom|withText"
        />

    <item android:id="@+id/action_help"
          android:title="@string/action_help"
          android:orderInCategory="2"
          android:icon="@drawable/ic_action_help"
          app:showAsAction="never"
        />

    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:orderInCategory="3"
          app:showAsAction="never"
          app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        />

    <item android:id="@+id/action_rate"
          android:title="@string/action_rate"
          android:orderInCategory="4"
          app:showAsAction="never"
        />


    <item android:id="@+id/action_version"
        android:title="@string/action_version"
        android:orderInCategory="5"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_get_products"
        android:title="@string/action_get_products"
        android:orderInCategory="6"
        app:showAsAction="never"
        />

</menu>
